added new jquery features

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <div class="about-section">
 
-        <p class="fn-6 text-center font-white">I'm a <span class="font-red-1">Frontend Developer</span><br> that creates dinamic and visually <br> appealing websites</p>
+        <p class="fn-6 text-center font-white">I'm a <span class="font-red-1 about-section-span">Frontend Developer</span><br> that creates dinamic and visually <br> appealing websites</p>
 
         <div class="about-flex-art-container">
           <div class="about-flex-art">
@@ -97,7 +97,7 @@
 
     <section class="services">
 
-      <h3 class="bold-700 fn-9 pointer">Services.</h3>
+      <h3 class="bold-700 fn-9 pointer services-title">Services.</h3>
 
       <div class="services-section">
 
