added new styles and improve responsive design

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </button>
 
         <div class="navbar-name-container">
-          <h2 class="bold uppercase navbar-name ">Ignacio</>
+          <h2 class="bold uppercase navbar-name">Ignacio</>
         </div>
 
         <div class="navbar-icons-parent">
@@ -72,9 +72,13 @@
 
     </header>
 
-    <section id="about" class="about">
+    <!-- TITLE ABOUT -->
 
-      <h3 class="bold-700 fn-9 pointer about-title">A<span>bout</span>.</h3>
+    <h3 class="bold-700 fn-9 pointer about-title">A<span>bout</span>.</h3>
+
+    <!-- TITLE ABOUT END -->
+
+    <section id="about" class="about">
 
       <div class="about-section">
 
