added new animation and added more responsive design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="wrapper">
-      <ul class="menu">
+      <ul class="menu fn-5">
         <li><a onclick="toggleMenu()" href="#">Home</a></li>
         <li><a onclick="toggleMenu()" href="#about">About</a></li>
         <li><a onclick="toggleMenu()" href="#">Services</a></li>
@@ -99,15 +99,26 @@
 
     </section>
 
-    <section class="services">
+    <h3 class="bold-700 fn-9 pointer services-title">Services.</h3>
 
-      <h3 class="bold-700 fn-9 pointer services-title">Services.</h3>
+    <section class="services">
 
       <div class="services-section">
 
         <p class="fn-6 text-center font-white">I use stable <span class="font-red-1">code</span> and minimalist <br> design on every project</p>
 
       </div>
+
+      <div class="services-flex">
+        <div class="services-flex-item flex-item-1"></div>
+        <div class="services-flex-item flex-item-2"></div>
+        <div class="services-flex-item flex-item-3"></div>
+      </div>
+
+      <div class="services-buttons">
+        <button class="animation-play fn-3 font-white">play</button>
+        <button class="animation-pause fn-3 font-white">pause</button>
+      </div>      
 
     </section>
 
