added new features and new responsive design animation, also fixed buttons problems

--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
   
         <div class="services-buttons">
           <button class="animation-button animation-play description-section-font font-white bold">play</button>
-          <button class="animation-button animation-pause description-section-font font-white bold">pause</button>
         </div>  
 
       </div>
@@ -146,7 +145,6 @@
   
         <div class="services-buttons">
           <button class="animation-button animation-play-2 description-section-font font-white bold">play</button>
-          <button class="animation-button animation-pause-2 description-section-font font-white bold">pause</button>
         </div>  
 
       </div>
@@ -165,23 +163,26 @@
 
       <div class="sec-3-sub sec-3-sub-2">
 
-        <p class="title-section-font font-white bold text-center">Code</p>
+        <p id="code-section" class="title-section-font font-white bold text-center pointer">Code</p>
 
         <div class="sec-3-anime-1"></div>
 
-        <p class="description-section-font font-white text-center">Transforming any idea <br> into code</p>
+        <p class="description-section-font font-white text-center sec-3-anime-1-play pointer">Transforming any idea <br> into code</p>
       </div>
 
       <div class="sec-3-sub sec-3-sub-3">
-        <p class="title-section-font font-white bold text-center">Web Design</p>
+        <p id="web-design-section" class="title-section-font font-white bold text-center pointer">Web Design</p>
         
         <div class="sec-3-anime-2"></div>
 
-        <p class="description-section-font font-white text-center">Calm colors and a peaceful experience</p>
+        <p class="description-section-font font-white text-center sec-3-anime-2-play pointer">Calm colors and a peaceful experience</p>
       </div>
 
       <div class="sec-3-sub sec-3-sub-4">
         <p class="title-section-font font-white bold text-center">Responsive Design</p>
+        <div class="sec-3-anime-3">
+          
+        </div>
         <p class="description-section-font font-white text-center">Adapt to any screen</p>
       </div>
 
