added new script to solve deployment issue

--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
       </div>
 
       <div class="sec-3-sub sec-3-sub-4">
-        <p class="title-section-font font-white bold text-center">Responsive Design</p>
+        <p class="title-section-font font-white bold text-center pointer opacity-50 ">Responsive Design</p>
         <div class="sec-3-anime-3">
-          
+
         </div>
-        <p class="description-section-font font-white text-center">Adapt to any screen</p>
+        <p class="description-section-font font-white text-center sec-3-anime-3-play pointer">Adapt to any screen</p>
       </div>
 
     </section>
@@ -191,7 +191,8 @@
     <!-- SECTION 3 - END -->
 
     <script src="./jquery.js"></script>
-    <script src="./node_modules/animejs/lib/anime.min.js"></script>
+    <!-- <script src="./node_modules/animejs/lib/anime.min.js"></script> -->
+    <script src="./anime2.js"></script>
     <script src="./app.js"></script>
     
 </body>
