added new animations and improve timing on screens animation

--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
 
         <div class="services-flex services-flex-grid">
           <div class="services-flex-item grid-item "></div>
+          <div class="services-flex-item grid-item midle-cube"></div>
           <div class="services-flex-item grid-item "></div>
           <div class="services-flex-item grid-item "></div>
+          <div class="services-flex-item grid-item midle-cube"></div>
           <div class="services-flex-item grid-item "></div>
           <div class="services-flex-item grid-item "></div>
-          <div class="services-flex-item grid-item "></div>
-          <div class="services-flex-item grid-item "></div>
-          <div class="services-flex-item grid-item "></div>
+          <div class="services-flex-item grid-item midle-cube"></div>
           <div class="services-flex-item grid-item "></div>
         </div>
   
