added new animations, fixed styles, created new animation letters and also created a customer function

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
 
       <div class="header-developer">
-        <h3 class="font-white bold-700 uppercase title-section-font ">Developer</h3>
+        <!-- <h3 class="font-white bold-700 uppercase title-section-font header-developer-title">Developer</h3> -->
       </div>
 
       <div class="header-designer">
@@ -122,7 +122,7 @@
         </div>
   
         <div class="services-buttons">
-          <button class="animation-button animation-play description-section-font font-white bold">play</button>
+          <button class="animation-button animation-play description-section-font font-white bold">&#x23F5</button>
         </div>  
 
       </div>
@@ -144,7 +144,7 @@
         </div>
   
         <div class="services-buttons">
-          <button class="animation-button animation-play-2 description-section-font font-white bold">play</button>
+          <button class="animation-button animation-play-2 description-section-font font-white bold">&#x23F5</button>
         </div>  
 
       </div>
