added new animations and new functions

--- a/index.html
+++ b/index.html
@@ -89,14 +89,16 @@
         <p class="title-section-font text-center font-white">I'm a <span class="font-red-1 about-section-span bold">Frontend Developer</span><br> that creates dinamic and visually <br> appealing websites</p>
 
         <div class="about-flex-art-container">
-          <div class="about-flex-art">
+
+          <!-- <div class="about-flex-art">
             <div class="about-flex-art-item flex-art1"></div>
             <div class="about-flex-art-item flex-art2"></div>
             <div class="about-flex-art-item flex-art3"></div>
             <div class="about-flex-art-item flex-art4"></div>
             <div class="about-flex-art-item flex-art5"></div>
             <div class="about-flex-art-item flex-art6"></div>
-          </div>
+          </div> -->
+
         </div>
 
         <p class="font-white description-section-font text-center regular-400">I use semantic <span class="bold font-red-1">HTML</span> and <span class="bold font-red-1">CSS</span><br> to provide a consistent website experience</p>
