added new section with title, new color and changed some html

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
       <div class="sec-3-sub sec-3-sub-2">
 
-        <p id="code-section" class="title-section-font font-white bold text-center pointer">Code</p>
+        <p id="code-section" class="title-section-font font-white bold text-center pointer">Web Development</p>
 
         <div class="sec-3-anime-1"></div>
 
@@ -175,7 +175,7 @@
       </div>
 
       <div class="sec-3-sub sec-3-sub-3">
-        <p id="web-design-section" class="title-section-font font-white bold text-center pointer">Web Design</p>
+        <p id="web-design-section" class="title-section-font font-white bold text-center pointer">Graphic Design</p>
         
         <div class="sec-3-anime-2"></div>
 
@@ -193,6 +193,22 @@
     </section>
 
     <!-- SECTION 3 - END -->
+
+    <!-- SECTION 4 - Portfolio START -->
+
+    <h3 class="bold-700 fn-9 pointer section-4-title">Portfolio.</h3>
+
+    <section class="section-4">
+
+      <div class="section-4-name">
+        <p class="text-center title-section-font bold">Projects</p>
+        <p class="description-section-font text-center">A collection of the diferent <span class="bold uppercase font-green-2">projects</span> that I have made, <br> using multiple <span class="bold uppercase font-green-2">technologies</span> and <span class="bold uppercase font-green-2">libraries</span></p>
+      </div>
+
+    </section>
+
+
+    <!-- SECTION 4 - Portfolio END -->
 
     <script src="./jquery.js"></script>
     <!-- <script src="./node_modules/animejs/lib/anime.min.js"></script> -->
