added new section changed play buttons, script modified, contact part added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <li><a href="#about">About</a></li>
         <li><a href="#">Design</a></li>
         <li><a href="#">Services</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </div>
 
@@ -126,7 +128,7 @@
         </div>
   
         <div class="services-buttons">
-          <button class="animation-button animation-play description-section-font font-white bold">&#x23F5</button>
+          <button class="animation-button animation-play description-section-font font-white bold">play</button>
         </div>  
 
       </div>
@@ -148,7 +150,7 @@
         </div>
   
         <div class="services-buttons">
-          <button class="animation-button animation-play-2 description-section-font font-white bold">&#x23F5</button>
+          <button class="animation-button animation-play-2 description-section-font font-white bold">play</button>
         </div>  
 
       </div>
@@ -207,8 +209,19 @@
 
     </section>
 
-
     <!-- SECTION 4 - Portfolio END -->
+
+    <!-- SECTION 5 - Contact Start -->
+
+    <h3 class="bold-700 fn-9 pointer section-5-title">Contact.</h3>
+
+    <section class="section-5">
+      <div class="section-5-name"></div>
+
+    </section>
+
+
+    <!-- SECTION 5 - Contact END -->
 
     <script src="./jquery.js"></script>
     <!-- <script src="./node_modules/animejs/lib/anime.min.js"></script> -->
