added new section more html, css and change some animations

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-    
 </head>
 <body>
 
@@ -19,6 +18,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#">Design</a></li>
         <li><a href="#">Services</a></li>
+        <li><a href="#">Tools</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -277,6 +277,55 @@
 
 
     <!-- SECTION 5 - Certificates END -->
+
+    <!-- SECTION tools - start -->
+
+      <h3 class="bold-700 fn-9 pointer section-tools-title">Tools.</h3>
+
+      <section class="section-tools">
+
+        <div class="section-tools-name">
+
+          <h4 class="cards-title font-white text-center">Basic Tools</h4>
+
+          <div class="gallery">
+              <div class="card">
+                  <p class="card-font bold-700 uppercase">HTML</p>
+                  <p class="card-description text-justify">The basic markup language for creating web pages</p>
+              </div>
+              <div class="card">
+                  <p class="card-font bold-700 uppercase">CSS</p>
+                  <p class="card-description text-justify">A language for styling the web</p>
+              </div>
+              <div class="card">
+                  <p class="card-font bold-700 uppercase">JavaScript</p>
+                  <p class="card-description text-justify">A scripting language for adding interactivity to web pages</p>
+              </div>
+              
+          </div>
+
+          <h4 class="cards-title font-white text-center">Advance Tools</h4>
+
+          <div class="gallery">
+              <div class="card">
+                  <p class="card-font bold-700 uppercase">SASS</p>
+                  <p class="card-description text-justify">A CSS powerful preprocessor.</p>
+              </div>
+              <div class="card">
+                  <p class="card-font bold-700 uppercase uppercase">Node</p>
+                  <p class="card-description text-justify">A runtime environment for developing server-side web.</p>
+              </div>
+              <div class="card">
+                  <p class="card-font bold-700 uppercase">React</p>
+                  <p class="card-description text-justify">The most popular library for building user interfaces.</p>
+              </div>
+          </div>
+
+        </div>
+
+      </section>
+
+    <!-- SECTION tools - end -->
 
     <!-- SECTION 6 - Contact Start -->
 
