added better titles

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <!-- TITLE ABOUT -->
 
-    <h3 id="about" class="bold-700 fn-9 pointer about-title">A<span>bout</span>.</h3>
+    <h3 id="about" class="bold-700 fn-9 pointer section-title">A<span>bout</span></h3>
 
     <!-- TITLE ABOUT END -->
 
@@ -108,7 +108,7 @@
 
     </section>
 
-    <h3 id="design" class="bold-700 fn-9 pointer services-title">Design.</h3>
+    <h3 id="design" class="bold-700 fn-9 pointer section-title">Design</h3>
 
     <section class="services">
 
@@ -169,7 +169,7 @@
 
     <!-- SECTION 3 - START -->
 
-    <h3 id="services" class="bold-700 fn-9 pointer section-3-title">Services.</h3>
+    <h3 id="services" class="bold-700 fn-9 pointer section-title">Services</h3>
 
     <section class="section-3">
 
@@ -208,7 +208,7 @@
 
     <!-- SECTION 4 - Portfolio START -->
 
-    <h3 id="portfolio" class="bold-700 fn-9 pointer section-4-title">Portfolio.</h3>
+    <h3 id="portfolio" class="bold-700 fn-9 pointer section-title">Portfolio</h3>
 
     <section class="section-4">
 
@@ -223,7 +223,7 @@
 
     <!-- SECTION 5 - Certificates -->
 
-    <h3 id="certificates" class="bold-700 fn-9 pointer section-5-title">Certificates.</h3>
+    <h3 id="certificates" class="bold-700 fn-9 pointer section-title">Certificates</h3>
 
     <section class="section-5">
 
@@ -424,7 +424,7 @@
 
     <!-- SECTION tools - start -->
 
-      <h3 id="tools" class="bold-700 fn-9 pointer section-tools-title">Tools.</h3>
+      <h3 id="tools" class="bold-700 fn-9 pointer section-title">Tools</h3>
 
       <section class="section-tools">
 
@@ -473,7 +473,7 @@
 
     <!-- SECTION 6 - Contact Start -->
 
-    <h3 id="contact" class="bold-700 fn-9 pointer section-6-title">Contact.</h3>
+    <h3 id="contact" class="bold-700 fn-9 pointer section-title">Contact</h3>
 
     <section class="section-6">
 
