added new portfolio slider

--- a/index.html
+++ b/index.html
@@ -213,8 +213,49 @@
     <section class="section-4">
 
       <div class="section-4-name">
-        <p class="text-center title-section-font bold">Projects</p>
+        <!-- <p class="text-center title-section-font bold">Projects</p> -->
+
+        <div class="card-projects-container">
+
+          <p class="card-arrow prev-arrow"> < </p>
+
+          <div class="card-projects">
+            <p class="text-center name-section-font bold">Project 1</p>
+            <p class="text-center name-section-font">Description of project 1</p>
+          </div>
+
+          <div class="card-projects">
+            <p class="text-center name-section-font bold">Project 2</p>
+            <p class="text-center name-section-font">Description of project 2</p>
+          </div>
+
+          <div class="card-projects">
+            <p class="text-center name-section-font bold">Project 3</p>
+            <p class="text-center name-section-font">Description of project 3</p>
+          </div>
+
+          <div class="card-projects">
+            <p class="text-center name-section-font bold">Project 4</p>
+            <p class="text-center name-section-font">Description of project 4</p>
+          </div>
+
+          <div class="card-projects">
+            <p class="text-center name-section-font bold">Project 5</p>
+            <p class="text-center name-section-font">Description of project 5</p>
+          </div>
+
+          <div class="card-projects">
+            <p class="text-center name-section-font bold">Project 6</p>
+            <p class="text-center name-section-font">Description of project 6</p>
+          </div>
+
+          <p class="card-arrow next-arrow"> > </p>
+
+        </div>
+
+
         <p class="description-section-font text-center">A collection of the diferent <span class="bold uppercase font-green-2">projects</span> that I have made, <br> using multiple <span class="bold uppercase font-green-2">technologies</span> and <span class="bold uppercase font-green-2">libraries</span></p>
+
       </div>
 
     </section>
