portfolio almost finish, proyect section deactivated

--- a/index.html
+++ b/index.html
@@ -206,14 +206,15 @@
 
     <!-- SECTION 3 - END -->
 
+    <!-- esta seccion esta desactivada, la debo completar mas adelante -->
+
     <!-- SECTION 4 - Portfolio START -->
 
-    <h3 id="portfolio" class="bold-700 fn-9 pointer section-title">Portfolio</h3>
+    <!-- <h3 id="portfolio" class="bold-700 fn-9 pointer section-title">Portfolio</h3>
 
     <section class="section-4">
 
       <div class="section-4-name">
-        <!-- <p class="text-center title-section-font bold">Projects</p> -->
 
         <div class="card-projects-container">
 
@@ -253,12 +254,11 @@
 
         </div>
 
-
         <p class="description-section-font text-center">A collection of the diferent <span class="bold uppercase font-green-2">projects</span> that I have made, <br> using multiple <span class="bold uppercase font-green-2">technologies</span> and <span class="bold uppercase font-green-2">libraries</span></p>
 
       </div>
 
-    </section>
+    </section> -->
 
     <!-- SECTION 4 - Portfolio END -->
 
